2010-Apr-06 weaver	Add classes to monobs for monitoring applications that use
			EPICS channel access.
2009-Dec-03 weaver  Tag V01-08-01.  Added derived event-builder in dev/bld to handle BLD.  Added
		    record/no_record option to RunControl.  All observers now specify a mask of
		    event nodes to receive.
2009-Nov-24 caf     Added support for the eventtest -c chunk_size flag.
2009-Nov-23 caf     Simplified offlineobs: do not destroy and reinitialize the EPICS context once established.
2009-Nov-20 cpo         Add some pnccd utilities (like camex channel swapping)
2009-Nov-19 weaver	Tag V01-06-01.  ObserverLevel uses node mask.
2009-Nov-16 weaver	Removed a few more instances of Qt slots called out of Qt thread context.
2009-Nov-12 weaver	Added DamageStats to control_gui for identifying source of damaged events.
2009-Nov-10 weaver  	Tag V01-06-00.  Removed BLD components from control_gui partition selection.
		    	Added separate bld "segment-level" event builder.
2009-Oct-28 weaver  Tag V01-05-00.  Removed Recorder level.
2009-Oct-27 tomytsai  Add command line options for bldServerTest and bldClientTest to support the multicast address/port/interface options.
2009-Oct-20 weaver  Tag V01-04-02.  Bug fix to config/ControlScan for live editing of scan
      configurations, and it now reads last used configuration.
      control/RunStatus now updates in QApplication thread.
2009-Oct-19 tomytsai  Rename pdsapp/test/epicsBldClientTest to bldClientTest, and add command line usage supports
2009-Oct-13 weaver  Tag V01-04-01.  Deployed everything at HEAD.
2009-Oct-8      cpo     Forgot to add the MySqlRunAllocator.  Tagged V01-03-03.
2009-Oct-8      cpo     Fix bug with run number allocation during automatic reconfig when changing config db.  Tagged V01-03-02.
2009-Oct-08     weaver  Tag V01-04-00.  Evr no longer uses command line argument for opcode.
      Added configdb support for versioned configurations.